# madra-delay-attribution

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_MADRA.notes.md  evaluate_results.py  pyproject.toml  requirements.txt  run_ablation.py  run_experiment.py  run_madra.py  run_pilot_study.py  smoke_test.py
.github/ISSUE_TEMPLATE/: bug_report.md  maintenance.md
.github/workflows/: smoke.yml
examples/: dataset.sample.jsonl  mock_result_from_smoke.json
madra/: __init__.py  agents.py  argument_graph.py  blackboard.py  coordinator.py  io.py  llm.py  messages.py  metrics.py  mock_llm.py  models.py  paper_writing.py  pipeline.py  prompts.py  protocol.py  retrieval.py  tem_harness.py  workflow.py
tests/: __init__.py  test_madra_blackboard_protocol.py  test_madra_ieee_tem_paper.py  test_madra_pilot_study.py  test_madra_research_prototype.py  test_tem_harness.py
